# ResearchOS-Read-Synthesize-Present

./: CHANGELOG.md  README.md  __init__.py  arxiv_utils.py  flowchart_utils.py  gui_streamlit.py  llm.py  logging_utils.py  main.py  memory_utils.py  models.py  pdf_utils.py  pipeline.py  pipeline_common.py  pipeline_core.py  pyproject.toml  requirements.txt  tex_utils.py  web_utils.py
docs/: chat_mode.md  codebase_guide.md  daily_brief.md  exam_prep.md  experiment_description.md  implementation_notes.md  paper_memory.md  reading_mode.md  reproduction_checklist.md  teaching_mode.md  viva_mode.md
