[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2ppt"
version = "0.5.5"
description = "Generate Beamer slides from arXiv papers"
requires-python = ">=3.10"
dependencies = [
  "arxiv",
  "pymupdf",
  "requests",
  "pydantic>=2.0",
  "tqdm",
  "langchain-nvidia-ai-endpoints",
  "python-dotenv",
  "streamlit",
]

[project.scripts]
paper2ppt = "main:main"

[tool.setuptools]
py-modules = [
  "arxiv_utils",
  "llm",
  "models",
  "pipeline",
  "pdf_utils",
  "web_utils",
  "gui_streamlit",
  "tex_utils",
  "main",
  "logging_utils",
]
