[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchos"
version = "0.7.1"
description = "Generate Beamer slides from arXiv papers"
requires-python = ">=3.10"
dependencies = [
  "arxiv",
  "pymupdf",
  "requests",
  "pydantic>=2.0",
  "tqdm",
  "langchain-nvidia-ai-endpoints",
  "python-dotenv",
  "streamlit",
  "rich",
  "sentence-transformers",
]

[project.scripts]
researchos = "main:main"

[tool.setuptools]
py-modules = [
  "arxiv_utils",
  "llm",
  "models",
  "flowchart_utils",
  "pipeline",
  "pdf_utils",
  "web_utils",
  "gui_streamlit",
  "tex_utils",
  "main",
  "logging_utils",
]
